--- a/lab_1/lab_1.ipynb
+++ b/lab_1/lab_1.ipynb
@@ -198,42 +198,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\"name\":[], \"surname\":[], \"age\":[], \"sex\":[]})\n",
+    "\n",
+    "df[\"name\"] = ['Artur', 'Maksymilian', 'Anaa', 'Teresa', 'Czesław']\n",
+    "df[\"surname\"] = ['Kowalski', 'Jan', 'Edo', 'Loos', 'Poad']\n",
+    "df[\"age\"] = [12, 17, 21, 18, 32]\n",
+    "df[\"sex\"] = ['male', 'male', 'female', 'female', 'male']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sprawdziliśmy działanie komendy pandas.info() wyświetla ona informację o DataFrame zawierające wartości non-null, dtype oraz zużycie pamięci."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          name   surname  age     sex\n",
-      "0        Artur  Kowalski   12    male\n",
-      "1  Maksymilian       Jan   17    male\n",
-      "2         Anna       Edo   21  female\n",
-      "3       Teresa      Loos   18  female\n",
-      "4       Czarek      Poad   32    male\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   name     5 non-null      object\n",
+      " 1   surname  5 non-null      object\n",
+      " 2   age      5 non-null      int64 \n",
+      " 3   sex      5 non-null      object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 288.0+ bytes\n"
      ]
     }
    ],
    "source": [
-    "data = {\n",
-    "    \"name\":['Artur', 'Maksymilian', 'Anna', 'Teresa', 'Czarek'], \n",
-    "    \"surname\" : ['Kowalski', 'Jan', 'Edo', 'Loos', 'Poad'], \n",
-    "    \"age\" : [12, 17, 21, 18, 32], \n",
-    "    \"sex\" : ['male', 'male', 'female', 'female', 'male']\n",
-    "}\n",
-    "\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "print(df)"
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "W dalszej kolejności sprawdzono działanie komendy pandas.describe(), odpowiedzialnej za przedstawienie statystyk liczbowych, w przypadku umieszczonym powyżej statystyki wykonane są dla wartości liczbowych."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>7.449832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>12.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>17.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>18.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>21.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>32.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             age\n",
+       "count   5.000000\n",
+       "mean   20.000000\n",
+       "std     7.449832\n",
+       "min    12.000000\n",
+       "25%    17.000000\n",
+       "50%    18.000000\n",
+       "75%    21.000000\n",
+       "max    32.000000"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.DataFrame({\"name\":[], \"surname\":[], \"age\":[], \"sex\":[]})"
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "W ostatniej części sprawdzono działanie instrukcji pandas.head(), w rezultacie funkcja zwraca n wierszy danego DataFrame'u. W przypadku jak poniżej bez podania parametru dodatkowego, zwrócona została cała tabela danych."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>surname</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Artur</td>\n",
+       "      <td>Kowalski</td>\n",
+       "      <td>12</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Maksymilian</td>\n",
+       "      <td>Jan</td>\n",
+       "      <td>17</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Anaa</td>\n",
+       "      <td>Edo</td>\n",
+       "      <td>21</td>\n",
+       "      <td>female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Teresa</td>\n",
+       "      <td>Loos</td>\n",
+       "      <td>18</td>\n",
+       "      <td>female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Czesław</td>\n",
+       "      <td>Poad</td>\n",
+       "      <td>32</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          name   surname  age     sex\n",
+       "0        Artur  Kowalski   12    male\n",
+       "1  Maksymilian       Jan   17    male\n",
+       "2         Anaa       Edo   21  female\n",
+       "3       Teresa      Loos   18  female\n",
+       "4      Czesław      Poad   32    male"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   }
  ],
