--- a/lab_1/lab_1.ipynb
+++ b/lab_1/lab_1.ipynb
@@ -342,12 +342,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "W ostatniej części sprawdzono działanie instrukcji pandas.head(), w rezultacie funkcja zwraca n wierszy danego DataFrame'u. W przypadku jak poniżej bez podania parametru dodatkowego, zwrócona została cała tabela danych."
+    "W ostatniej części sprawdzono działanie instrukcji pandas.head(), w rezultacie funkcja zwraca n wierszy danego DataFrame'u. W przypadku jak poniżej, podano argument 3, uzyskano poprzez pierwsze trzy rekordy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -399,20 +399,6 @@
        "      <td>21</td>\n",
        "      <td>female</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Teresa</td>\n",
-       "      <td>Loos</td>\n",
-       "      <td>18</td>\n",
-       "      <td>female</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Czesław</td>\n",
-       "      <td>Poad</td>\n",
-       "      <td>32</td>\n",
-       "      <td>male</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -421,18 +407,16 @@
        "          name   surname  age     sex\n",
        "0        Artur  Kowalski   12    male\n",
        "1  Maksymilian       Jan   17    male\n",
-       "2         Anaa       Edo   21  female\n",
-       "3       Teresa      Loos   18  female\n",
-       "4      Czesław      Poad   32    male"
+       "2         Anaa       Edo   21  female"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(3)"
    ]
   }
  ],
