--- a/lab_1/lab_1.ipynb
+++ b/lab_1/lab_1.ipynb
@@ -204,7 +204,7 @@
    "source": [
     "df = pd.DataFrame({\"name\":[], \"surname\":[], \"age\":[], \"sex\":[]})\n",
     "\n",
-    "df[\"name\"] = ['Artur', 'Maksymilian', 'Anaa', 'Teresa', 'Czesław']\n",
+    "df[\"name\"] = ['Artur', 'Maksymilian', 'Anna', 'Teresa', 'Czesław']\n",
     "df[\"surname\"] = ['Kowalski', 'Jan', 'Edo', 'Loos', 'Poad']\n",
     "df[\"age\"] = [12, 17, 21, 18, 32]\n",
     "df[\"sex\"] = ['male', 'male', 'female', 'female', 'male']"
