--- a/lab_2/lab_2.ipynb
+++ b/lab_2/lab_2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,21 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16\n"
+      "W wypożyczalni jest 16 kategorii filmów.\n"
      ]
     }
    ],
    "source": [
-    "result_1 = db.execute('SELECT COUNT(name) FROM category')\n",
+    "categories = pd.read_sql('SELECT COUNT(name) FROM category', con=connection)\n",
     "\n",
-    "print(tuple(result_1)[0][0])"
+    "print(f'W wypożyczalni jest {categories.loc[0][0]} kategorii filmów.')"
    ]
   },
   {
@@ -134,37 +134,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Action\n",
-      "Animation\n",
-      "Children\n",
-      "Classics\n",
-      "Comedy\n",
-      "Documentary\n",
-      "Drama\n",
-      "Family\n",
-      "Foreign\n",
-      "Games\n",
-      "Horror\n",
-      "Music\n",
-      "New\n",
-      "Sci-Fi\n",
-      "Sports\n",
-      "Travel\n"
+      "           name\n",
+      "0        Action\n",
+      "1     Animation\n",
+      "2      Children\n",
+      "3      Classics\n",
+      "4        Comedy\n",
+      "5   Documentary\n",
+      "6         Drama\n",
+      "7        Family\n",
+      "8       Foreign\n",
+      "9         Games\n",
+      "10       Horror\n",
+      "11        Music\n",
+      "12          New\n",
+      "13       Sci-Fi\n",
+      "14       Sports\n",
+      "15       Travel\n"
      ]
     }
    ],
    "source": [
-    "result_2 = db.execute('SELECT name FROM category ORDER BY name ASC')\n",
+    "categories_alph = pd.read_sql('SELECT name FROM category ORDER BY name ASC', con=connection)\n",
     "\n",
-    "for category in result_2:\n",
-    "    print(category[0])"
+    "print(categories_alph)"
    ]
   },
   {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -196,13 +196,13 @@
     }
    ],
    "source": [
-    "result_3a = db.execute('SELECT title FROM film ORDER BY release_year ASC LIMIT 1')\n",
+    "oldest_film = pd.read_sql('SELECT title FROM film ORDER BY release_year DESC LIMIT 1', con=connection)\n",
     "\n",
-    "print(f'Najstarszy film: {tuple(result_3a)[0][0]}')\n",
+    "print(f'Najstarszy film: {oldest_film.loc[0][0]}')\n",
     "\n",
-    "result_3b = db.execute('SELECT title FROM film ORDER BY release_year DESC LIMIT 1')\n",
+    "newest_film = pd.read_sql('SELECT title FROM film ORDER BY release_year ASC LIMIT 1', con=connection)\n",
     "\n",
-    "print(f'Najmłodszy film: {tuple(result_3b)[0][0]}')\n"
+    "print(f'Najmłodszy film: {newest_film.loc[0][0]}')\n"
    ]
   },
   {
@@ -221,21 +221,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6709\n"
+      "W okresie pomiędzy 2005-07-01 a 2005-08-01 było 6709 wypożyczeń.\n"
      ]
     }
    ],
    "source": [
-    "result_4 = db.execute(\"SELECT COUNT(rental_date) FROM rental WHERE rental_date BETWEEN '2005-07-01' AND '2005-08-01'\")\n",
+    "how_many = pd.read_sql(\"SELECT COUNT(rental_date) FROM rental WHERE rental_date BETWEEN '2005-07-01' AND '2005-08-01'\", con=connection)\n",
     "\n",
-    "print(tuple(result_4)[0][0])"
+    "print(f'W okresie pomiędzy 2005-07-01 a 2005-08-01 było {how_many.loc[0][0]} wypożyczeń.')"
    ]
   },
   {
@@ -254,21 +254,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "W okresie pomiędzy 2010-01-01 a 2011-02-01 było 0 wypożyczeń.\n"
      ]
     }
    ],
    "source": [
-    "result_5 = db.execute(\"SELECT COUNT(rental_date) FROM rental WHERE rental_date BETWEEN '2010-01-01' AND '2011-02-01'\")\n",
-    "\n",
-    "print(tuple(result_5)[0][0])"
+    "how_many2 = pd.read_sql(\"SELECT COUNT(rental_date) FROM rental WHERE rental_date BETWEEN '2010-01-01' AND '2011-02-01'\", con=connection)\n",
+    "print(f'W okresie pomiędzy 2010-01-01 a 2011-02-01 było {how_many2.loc[0][0]} wypożyczeń.')"
    ]
   },
   {
@@ -287,10 +286,348 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Największa płatnośc wypożyczenia wynosi: 11.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "highest_payment = pd.read_sql(\"SELECT amount FROM payment ORDER BY amount DESC LIMIT 1\", con=connection)\n",
+    "\n",
+    "print('Największa płatnośc wypożyczenia wynosi:', highest_payment['amount'][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Zadanie 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Znajdź wszystkich klientów z Polski, Nigerii lub Bangladeszu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    customer_id first_name  last_name     country\n",
+      "0           284      Sonia    Gregory     Nigeria\n",
+      "1           318      Brian      Wyman      Poland\n",
+      "2           572     Sidney   Burleson      Poland\n",
+      "3           409     Rodney    Moeller     Nigeria\n",
+      "4           332    Stephen     Qualls  Bangladesh\n",
+      "5           286      Velma      Lucas     Nigeria\n",
+      "6            80    Marilyn       Ross     Nigeria\n",
+      "7           198      Elsie     Kelley     Nigeria\n",
+      "8           103     Gladys   Hamilton     Nigeria\n",
+      "9           329      Frank   Waggoner  Bangladesh\n",
+      "10          128   Marjorie     Tucker      Poland\n",
+      "11           18      Carol     Garcia     Nigeria\n",
+      "12          270       Leah     Curtis      Poland\n",
+      "13          501      Ruben      Geary      Poland\n",
+      "14          277       Olga    Jimenez     Nigeria\n",
+      "15          156     Bertha   Ferguson     Nigeria\n",
+      "16          280     Tracey    Barrett     Nigeria\n",
+      "17          250         Jo     Fowler     Nigeria\n",
+      "18          571    Johnnie   Chisholm      Poland\n",
+      "19          562    Wallace      Slone     Nigeria\n",
+      "20           21   Michelle      Clark  Bangladesh\n",
+      "21          380    Russell    Brinson      Poland\n",
+      "22          558     Jimmie  Eggleston      Poland\n",
+      "23          232  Constance       Reid     Nigeria\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = '''\n",
+    "SELECT customer.customer_id, customer.first_name, customer.last_name, country.country\n",
+    "FROM customer\n",
+    "INNER JOIN address USING(address_id)\n",
+    "INNER JOIN city USING(city_id)\n",
+    "INNER JOIN country USING(country_id)\n",
+    "WHERE country.country IN ('Nigeria', 'Bangladesh', 'Poland')\n",
+    "'''\n",
+    "\n",
+    "citizen = pd.read_sql(query, con=connection)\n",
+    "\n",
+    "print(citizen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Zadanie 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gdzie mieszkają członkowie personelu?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  first_name last_name               address district        city\n",
+      "0       Mike   Hillyer     23 Workhaven Lane  Alberta  Lethbridge\n",
+      "1        Jon  Stephens  1411 Lillydale Drive      QLD   Woodridge\n"
+     ]
+    }
+   ],
+   "source": [
+    "query8 = '''\n",
+    "SELECT staff.first_name, staff.last_name, address.address, address.district, city.city\n",
+    "FROM staff\n",
+    "INNER JOIN address USING(address_id)\n",
+    "INNER JOIN city USING(city_id)\n",
+    "'''\n",
+    "\n",
+    "personel = pd.read_sql(query8, con=connection)\n",
+    "\n",
+    "print(personel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Zadanie 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ilu pracowników mieszka w Argentynie lub Hiszpani?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W Argentynie lub Hiszpani mieszka 0 pracowników.\n"
+     ]
+    }
+   ],
+   "source": [
+    "query9 = '''\n",
+    "SELECT COUNT(*)\n",
+    "FROM staff\n",
+    "INNER JOIN address USING(address_id)\n",
+    "INNER JOIN city USING(city_id)\n",
+    "INNER JOIN country USING(country_id)\n",
+    "WHERE country.country IN ('Spain', 'Argentina')\n",
+    "'''\n",
+    "\n",
+    "personel_country = db.execute(query9)\n",
+    "\n",
+    "print(f'W Argentynie lub Hiszpani mieszka {tuple(personel_country)[0][0]} pracowników.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Zadanie 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jakie kategorie filmów zostały wypożyczone przez klientów?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           name\n",
+      "0        Sports\n",
+      "1      Classics\n",
+      "2           New\n",
+      "3        Family\n",
+      "4        Comedy\n",
+      "5     Animation\n",
+      "6        Travel\n",
+      "7         Music\n",
+      "8         Drama\n",
+      "9        Horror\n",
+      "10       Sci-Fi\n",
+      "11        Games\n",
+      "12  Documentary\n",
+      "13      Foreign\n",
+      "14       Action\n",
+      "15     Children\n"
+     ]
+    }
+   ],
+   "source": [
+    "query10 = '''\n",
+    "SELECT DISTINCT category.name\n",
+    "FROM category\n",
+    "INNER JOIN film_category USING(category_id)\n",
+    "INNER JOIN film USING(film_id)\n",
+    "INNER JOIN inventory USING(film_id)\n",
+    "INNER JOIN rental USING(inventory_id)\n",
+    "'''\n",
+    "\n",
+    "categories_rent = pd.read_sql(query10, con=connection)\n",
+    "\n",
+    "print(categories_rent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Zadanie 11"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Znajdź wszystkie kategorie filmów wypożyczonych w Ameryce. (branę pod uwagę jest USA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           name\n",
+      "0        Action\n",
+      "1     Animation\n",
+      "2      Children\n",
+      "3      Classics\n",
+      "4        Comedy\n",
+      "5   Documentary\n",
+      "6         Drama\n",
+      "7        Family\n",
+      "8       Foreign\n",
+      "9         Games\n",
+      "10       Horror\n",
+      "11        Music\n",
+      "12          New\n",
+      "13       Sci-Fi\n",
+      "14       Sports\n",
+      "15       Travel\n"
+     ]
+    }
+   ],
+   "source": [
+    "query11 = '''\n",
+    "SELECT DISTINCT category.name\n",
+    "FROM category\n",
+    "INNER JOIN film_category USING(category_id)\n",
+    "INNER JOIN film USING(film_id)\n",
+    "INNER JOIN inventory USING(film_id)\n",
+    "INNER JOIN rental USING(inventory_id)\n",
+    "INNER JOIN customer USING(customer_id)\n",
+    "INNER JOIN address USING(address_id)\n",
+    "INNER JOIN city USING(city_id)\n",
+    "INNER JOIN country USING(country_id)\n",
+    "WHERE country = 'United States'\n",
+    "'''\n",
+    "\n",
+    "categories_country = pd.read_sql(query11, con=connection)\n",
+    "\n",
+    "print(categories_country)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Zadanie 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Znajdź wszystkie tytuły filmów, w których grał: Olympia Pfeiffer lub Julia Zellweger lub Ellen Presley."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   title first_name  last_name\n",
+      "0            Badman Dawn    Olympia   Pfeiffer\n",
+      "1        Bilko Anonymous      Ellen    Presley\n",
+      "2   Breakfast Goldfinger      Julia  Zellweger\n",
+      "3      Caribbean Liberty      Ellen    Presley\n",
+      "4       Casper Dragonfly      Ellen    Presley\n",
+      "..                   ...        ...        ...\n",
+      "64             Turn Star      Ellen    Presley\n",
+      "65            Wait Cider    Olympia   Pfeiffer\n",
+      "66          Women Dorado      Ellen    Presley\n",
+      "67             Won Dares      Julia  Zellweger\n",
+      "68         Wyoming Storm      Julia  Zellweger\n",
+      "\n",
+      "[69 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "query12 = '''\n",
+    "SELECT DISTINCT film.title, actor.first_name, actor.last_name\n",
+    "FROM film\n",
+    "INNER JOIN film_actor USING(film_id)\n",
+    "INNER JOIN actor USING(actor_id)\n",
+    "WHERE actor.first_name IN ('Olympia', 'Julia', 'Ellen') AND actor.last_name IN ('Pfeiffer', 'Zellweger', 'Presley')\n",
+    "'''\n",
+    "\n",
+    "titles_actor = pd.read_sql(query12, con=connection)\n",
+    "\n",
+    "print(titles_actor)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
